--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "module": "./dist/index.es.js",
   "types": "./dist/types/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
   "scripts": {
     "build": "rimraf dist && vue-tsc && vite build",
